--- a/app/src/main/res/drawable/background_report.xml
+++ b/app/src/main/res/drawable/background_report.xml
@@ -6,6 +6,6 @@
         android:radius="1dp"
         android:topLeftRadius="0dp" />
 
-    <solid android:color="@android:color/holo_purple" />
+    <solid android:color="@android:color/holo_red_light" />
 
 </shape>
