filterMap working for 3 filters

--- a/app/src/main/res/layout/activity_map_tracking.xml
+++ b/app/src/main/res/layout/activity_map_tracking.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarMap"
         android:minHeight="?attr/actionBarSize"
-        android:background="#000"
+        android:background="#9b6191"
         app:titleTextColor="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
