--- a/app/src/main/res/layout/dog_details_view.xml
+++ b/app/src/main/res/layout/dog_details_view.xml
@@ -24,7 +24,7 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginTop="0dp"
-        android:background="@color/colorAccent"
+        android:background="#9b6191"
         android:text="@string/back"
         android:textColor="#FFFF" />
 
