--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -55,7 +55,7 @@
             android:layout_height="50dp"
             android:layout_marginStart="50dp"
             android:layout_marginTop="50dp"
-            android:background="@color/colorAccent"
+            android:background="#9b6191"
             android:text="@string/login"
             android:textColor="#FFFF" />
 
@@ -66,7 +66,7 @@
             android:layout_marginStart="70dp"
             android:layout_marginTop="50dp"
             android:layout_marginEnd="30dp"
-            android:background="@color/colorAccent"
+            android:background="#9b6191"
             android:text="@string/register"
             android:textColor="#FFFF" />
     </LinearLayout>
