--- a/app/src/main/res/layout/register_activity.xml
+++ b/app/src/main/res/layout/register_activity.xml
@@ -52,7 +52,7 @@
         android:layout_marginTop="50dp"
         android:textColor="#FFFF"
         android:id="@+id/nextButton"
-        android:background="@color/colorAccent"/>
+        android:background="#9b6191"/>
 
 
 
