--- a/app/src/main/res/layout/dog_details_view.xml
+++ b/app/src/main/res/layout/dog_details_view.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewLogo"
         android:layout_width="125dp"
         android:layout_height="138dp"
         app:srcCompat="@drawable/doglogo" />
@@ -17,15 +17,32 @@
     <ListView
         android:id="@+id/listViewDogs"
         android:layout_width="405dp"
-        android:layout_height="343dp" />
+        android:layout_height="374dp" />
 
-    <Button
-        android:id="@+id/backToOnline"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="0dp"
-        android:background="#9b6191"
-        android:text="@string/back"
-        android:textColor="#FFFF" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/backToOnline"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="70dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="25dp"
+            android:background="#9b6191"
+            android:text="@string/back"
+            android:textColor="#FFFF" />
+
+        <Button
+            android:id="@+id/editDog"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="0dp"
+            android:background="#9b6191"
+            android:text="@string/edit_doggo"
+            android:textColor="#FFFF" />
+    </LinearLayout>
+
 
 </LinearLayout>
