--- a/app/src/main/res/layout/activity_map_tracking.xml
+++ b/app/src/main/res/layout/activity_map_tracking.xml
@@ -18,6 +18,18 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context = ".MapTracking"/>
+        tools:context = ".MapTracking">
+        <Button
+            android:id="@+id/abadonedDogBtn"
+            android:background="@drawable/report"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_gravity="right|bottom"
+            android:padding="10dp"
+            android:paddingStart="10dp"
+            android:layout_marginTop="20dp"
+            android:paddingEnd="10dp"/>
+    </fragment>
+
 
 </RelativeLayout>
