--- a/app/src/main/res/layout/dog_details_others.xml
+++ b/app/src/main/res/layout/dog_details_others.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewLogo"
         android:layout_width="125dp"
         android:layout_height="138dp"
         app:srcCompat="@drawable/doglogo" />
@@ -24,15 +24,22 @@
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
+        <Button
+            android:id="@+id/backFromChat"
+            android:layout_width="106dp"
+            android:layout_height="31dp"
+            android:layout_marginStart="85dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="15dp"
+            android:background="#9b6191"
+            android:text="@string/back"
+            android:textColor="#FFFF" />
 
         <Button
             android:id="@+id/chatButton"
-            android:layout_width="100dp"
-            android:layout_height="50dp"
-
-            android:layout_marginStart="140dp"
+            android:layout_width="103dp"
+            android:layout_height="31dp"
             android:layout_marginTop="0dp"
-            android:layout_marginEnd="50dp"
             android:background="#9b6191"
             android:text="@string/chat"
             android:textColor="#FFFF" />
