--- a/app/src/main/res/layout/filters_layout.xml
+++ b/app/src/main/res/layout/filters_layout.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -28,27 +27,27 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="93dp"
             android:orientation="horizontal">
 
             <CheckBox
                 android:id="@+id/dogSizeSmallSearch"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:onClick="onCheckboxClicked"
                 android:text="@string/small" />
 
             <CheckBox
                 android:id="@+id/dogSizeMediumSearch"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content"
+                android:layout_height="47dp"
                 android:onClick="onCheckboxClicked"
                 android:text="@string/medium" />
 
             <CheckBox
                 android:id="@+id/dogSizeBigSearch"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:onClick="onCheckboxClicked"
                 android:text="@string/big" />
         </LinearLayout>
@@ -63,13 +62,13 @@
         <TextView
             android:id="@+id/searchMateText"
             android:layout_width="match_parent"
-            android:layout_height="47dp"
+            android:layout_height="56dp"
             android:text="@string/search_by_mating"
             android:textSize="20sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="56dp"
+            android:layout_height="79dp"
             android:orientation="horizontal">
 
             <CheckBox
@@ -94,58 +93,27 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="255dp"
+        android:layout_height="144dp"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/searchBreedText"
-            android:layout_width="match_parent"
-            android:layout_height="47dp"
-            android:text="@string/search_breed_text"
-            android:textSize="20sp" />
-
-        <RelativeLayout
+        <Button
+            android:id="@+id/searchBreedButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp">
+            android:background="#9b6191"
+            android:text="@string/search_breed_text"
+            android:textColor="#FFFF"
+            android:textSize="16sp" />
 
-
-            <EditText
-                android:id="@+id/searchBox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="3dp"
-                android:layout_marginEnd="7dp"
-                android:layout_toStartOf="@+id/img_ButtonSearch"
-                android:hint="@string/search" />
-
-
-            <ImageButton
-                android:id="@+id/img_ButtonSearch"
-                android:layout_width="52dp"
-                android:layout_height="49dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:background="@drawable/searchimg"
-                tools:ignore="RtlHardcoded" />
-
-
-        </RelativeLayout>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/resultList"
-            android:layout_width="match_parent"
-            android:layout_height="313dp">
-
-        </android.support.v7.widget.RecyclerView>
 
     </LinearLayout>
 
     <Button
         android:id="@+id/buttonApplyFilters"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="141dp"
+        android:layout_height="32dp"
         android:layout_marginStart="120dp"
-        android:text="@string/apply_filters" />
+        android:background="#9b6191"
+        android:text="@string/apply_filters"
+        android:textColor="#FFFF" />
 </LinearLayout>
