--- a/app/src/main/res/layout/dog_details_others.xml
+++ b/app/src/main/res/layout/dog_details_others.xml
@@ -28,7 +28,7 @@
             android:id="@+id/backFromChat"
             android:layout_width="106dp"
             android:layout_height="31dp"
-            android:layout_marginStart="85dp"
+            android:layout_marginStart="25dp"
             android:layout_marginTop="0dp"
             android:layout_marginEnd="15dp"
             android:background="#9b6191"
@@ -42,6 +42,17 @@
             android:layout_marginTop="0dp"
             android:background="#9b6191"
             android:text="@string/chat"
+            android:textColor="#FFFF" />
+
+        <Button
+            android:id="@+id/seeOwnerButton"
+            android:layout_width="103dp"
+            android:layout_height="31dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
+            android:background="#9b6191"
+            android:text="@string/see_owner"
             android:textColor="#FFFF" />
     </LinearLayout>
 
