--- a/app/src/main/res/layout/dog_details_others.xml
+++ b/app/src/main/res/layout/dog_details_others.xml
@@ -16,8 +16,8 @@
 
     <ListView
         android:id="@+id/listViewDogs"
-        android:layout_width="405dp"
-        android:layout_height="374dp" />
+        android:layout_width="match_parent"
+        android:layout_height="376dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +29,7 @@
             android:layout_width="106dp"
             android:layout_height="31dp"
             android:layout_marginStart="25dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
             android:background="#9b6191"
             android:text="@string/back"
@@ -39,7 +39,7 @@
             android:id="@+id/chatButton"
             android:layout_width="103dp"
             android:layout_height="31dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="15dp"
             android:background="#9b6191"
             android:text="@string/chat"
             android:textColor="#FFFF" />
@@ -48,7 +48,7 @@
             android:id="@+id/seeOwnerButton"
             android:layout_width="103dp"
             android:layout_height="31dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="15dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:background="#9b6191"
