--- a/app/src/main/res/layout/dog_details_view.xml
+++ b/app/src/main/res/layout/dog_details_view.xml
@@ -13,22 +13,30 @@
         android:layout_height="125dp"
         app:srcCompat="@drawable/doglogo" />
 
+    <TextView
+        android:id="@+id/textViewDog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/please_click_informations_to_update"
+        android:textAlignment="center" />
+
 
     <ListView
         android:id="@+id/listViewDogs"
-        android:layout_width="405dp"
-        android:layout_height="379dp" />
+        android:layout_width="match_parent"
+        android:layout_height="373dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/backToOnline"
             android:layout_width="106dp"
             android:layout_height="31dp"
             android:layout_marginStart="140dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="15dp"
             android:background="#9b6191"
             android:text="@string/back"
