--- a/app/src/main/res/layout/filters_layout.xml
+++ b/app/src/main/res/layout/filters_layout.xml
@@ -108,12 +108,31 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/buttonApplyFilters"
-        android:layout_width="141dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="120dp"
-        android:background="#9b6191"
-        android:text="@string/apply_filters"
-        android:textColor="#FFFF" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/backToOnline"
+            android:layout_width="106dp"
+            android:layout_height="31dp"
+            android:layout_marginStart="55dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
+            android:background="#9b6191"
+            android:text="@string/back"
+            android:textColor="#FFFF" />
+
+        <Button
+            android:id="@+id/buttonApplyFilters"
+            android:layout_width="141dp"
+            android:layout_height="32dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="35dp"
+            android:background="#9b6191"
+            android:text="@string/apply_filters"
+            android:textColor="#FFFF" />
+    </LinearLayout>
+
 </LinearLayout>
