--- a/app/src/main/res/layout/update_value.xml
+++ b/app/src/main/res/layout/update_value.xml
@@ -83,7 +83,7 @@
         android:id="@+id/textViewEdit6"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/edit_mate"
+        android:text="@string/edit_mating_y_n"
         android:textAlignment="center"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
