solved Notif bug

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string-array name="interval_names">
-
+        <item>Five minutes</item>
         <item>Half an hour</item>
         <item>An hour</item>
         <item>Half a day</item>
@@ -11,6 +11,7 @@
 
     <string-array name="interval_values">
 
+        <item>300000</item>
         <item>1800000</item>
         <item>3600000</item>
         <item>43200000</item>
