--- a/app/src/main/res/layout/activity_map_tracking.xml
+++ b/app/src/main/res/layout/activity_map_tracking.xml
@@ -24,11 +24,13 @@
             android:background="@drawable/report"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_gravity="right|bottom"
-            android:padding="10dp"
+            android:layout_gravity="end|bottom"
+            android:padding="20dp"
             android:paddingStart="10dp"
             android:layout_marginTop="20dp"
-            android:paddingEnd="10dp"/>
+            android:layout_marginBottom ="15dp"
+            android:layout_marginEnd ="15dp"
+            android:paddingEnd="20dp"/>
     </fragment>
 
 
