realtime Map Markers

--- a/app/src/main/res/layout/dog_details_view.xml
+++ b/app/src/main/res/layout/dog_details_view.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="#FFF"
     android:gravity="center"
+    android:padding="8dp"
     android:orientation="vertical">
 
     <ImageView
