--- a/app/src/main/res/layout/user_details_view.xml
+++ b/app/src/main/res/layout/user_details_view.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:background="#FFF"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/imageViewLogo"
