--- a/app/src/main/res/layout/list_online.xml
+++ b/app/src/main/res/layout/list_online.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@drawable/background">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolBar"
-        android:minHeight="?attr/actionBarSize"
-        android:background="#9b6191"
-        app:titleTextColor="@android:color/white"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navigation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:background="@android:color/white"
+        app:headerLayout="@layout/header"
+        app:itemIconTint="@color/colorPrimaryDark"
+        app:itemTextColor="@color/colorPrimaryDark"
+        app:menu="@menu/menu_dogs" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/listOnline"
-        android:layout_below="@+id/toolBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
