--- a/app/src/main/res/menu/menu_dogs.xml
+++ b/app/src/main/res/menu/menu_dogs.xml
@@ -3,25 +3,37 @@
 
     <item
         android:id="@+id/itemServiceStart"
+        android:icon="@drawable/ic_autorenew_black_24dp"
         android:title="@string/refresh" />
+
     <item
         android:id="@+id/action_map"
+        android:icon="@drawable/ic_map_black_24dp"
         android:title="@string/see_map" />
     <item
         android:id="@+id/userDetails"
+        android:icon="@drawable/ic_people_black_24dp"
         android:title="@string/my_profile" />
+
     <item
         android:id="@+id/dogDetails"
+        android:icon="@drawable/ic_pets_black_24dp"
         android:title="@string/my_dog" />
+
 
     <item
         android:id="@+id/reportMissingDog"
+        android:icon="@drawable/ic_announcement_black_24dp"
         android:title="@string/report_missing_dog" />
+
     <item
         android:id="@+id/editInterval"
+        android:icon="@drawable/ic_timer_black_24dp"
         android:title="@string/refresh_interval" />
+
 
     <item
         android:id="@+id/action_logout"
+        android:icon="@drawable/ic_power_settings_new_black_24dp"
         android:title="@string/logoutMenu" />
 </menu>
