--- a/app/src/main/res/layout/list_chats.xml
+++ b/app/src/main/res/layout/list_chats.xml
@@ -12,7 +12,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/userPicture"
+            android:id="@+id/showUserProfile"
             android:layout_width="41dp"
             android:layout_height="41dp"
             android:src="@drawable/ic_pets_black_24dp" />
@@ -24,7 +24,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/show_reporter"
+                android:id="@+id/show_userChat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/background_report"
@@ -33,21 +33,6 @@
                 android:textColor="#000"
                 android:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/show_message_report"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/fui_transparent"
-                android:padding="8dp"
-                android:text="@string/hi"
-                android:textColor="#000"
-                android:textSize="15sp" />
-            <ImageView
-                android:id="@+id/dogPictureLost"
-                android:layout_width="128dp"
-                android:layout_height="128dp"
-                android:src="@drawable/ic_pets_black_24dp"
-                android:layout_gravity="center"/>
 
         </LinearLayout>
 
