--- a/app/src/main/res/menu/menu_dogs.xml
+++ b/app/src/main/res/menu/menu_dogs.xml
@@ -11,6 +11,10 @@
         android:icon="@drawable/ic_map_black_24dp"
         android:title="@string/see_map" />
     <item
+        android:id="@+id/action_recentChats"
+        android:icon="@drawable/ic_chat_black_24dp"
+        android:title="@string/recent_chatss" />
+    <item
         android:id="@+id/userDetails"
         android:icon="@drawable/ic_people_black_24dp"
         android:title="@string/my_profile" />
